--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bootstrap-vue": "^2.0.0-rc.11",
+    "axios": "^0.18.0",
     "vue": "^2.5.17"
   },
   "devDependencies": {
